# kasu-stamp-bot-rs

./: Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: copilot_task.md  feature_refactor.md
.github/instructions/: rust.instructions.md
.github/workflows/: ci.yml
src/: chat.rs  config.rs  detect.rs  discord.rs  main.rs  table.rs
