[package]
name = "kasu-stamp-bot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "^0.4.27"
rand = "^0.9.1"
anyhow = "^1.0.100"
serenity = { version = "^0.12.4", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "^1.45.0", features = ["macros", "rt-multi-thread"] }
async-trait = "^0.1.88"
dotenv = "^0.15.0"
regex = "^1.11.1"
once_cell = "^1.21.3"
csv = "^1.3.1"
