[package]
name = "kasu-stamp-bot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "^0.4.28"
rand = "^0.9.2"
anyhow = "^1.0.100"
serenity = { version = "^0.12.4", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "^1.48.0", features = ["macros", "rt-multi-thread"] }
async-trait = "^0.1.89"
config = "^0.15.19"
serde = { version = "^1.0.228", features = ["derive"] }
regex = "^1.12.2"
once_cell = "^1.21.3"
csv = "^1.4.0"
